se modifico nombre Zav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="nav-wrapper #0d47a1 blue darken-4">
                 <a href="#!" class="brand-logo">Logo</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">MENU</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href=""><i class="material-icons left">home</i>Inicio</a></li>
                     <li><a href=""><i class="material-icons left">help</i>Acerca de</a></li>
@@ -72,7 +72,7 @@
                         <img src="img/img.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
                     </div>
                     <span class="white-text">
-                        <h4>Araceli Vazquez</h4>
+                        <h4>Araceli Vazquez Z</h4>
                     </span>
                     <p>Curso Materialize</p>
                 </div>
