se modifico nombre Zav

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <img src="img/img.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
                     </div>
                     <span class="white-text">
-                        <h4>Araceli Vazquez Z</h4>
+                        <h4>Araceli Vazquez Zav</h4>
                     </span>
                     <p>Curso Materialize</p>
                 </div>
