--- a/index.html
+++ b/index.html
@@ -173,6 +173,60 @@
                     </div>
                 </div>
             </div>
+            <div class="col s12 m12">
+                <div class="col s12 m6">
+                    <div class="card-panel black-text teal lighten-4 z-depth-4">
+                        <div class="center">
+                            <i class="material-icons icon-content green-text">android</i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, suscipit eius. Placeat aspernatur odio necessitatibus voluptate aliquid velit labore minima repellendus, beatae veritatis harum vitae magni. Dolorum assumenda delectus mollitia.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m6">
+                    <div class="card-panel black-text red lighten-5 z-depth-4">
+                        <div class="center">
+                            <i class="material-icons icon-content red-text">audiotrack</i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, suscipit eius. Placeat aspernatur odio necessitatibus voluptate aliquid velit labore minima repellendus, beatae veritatis harum vitae magni. Dolorum assumenda delectus mollitia.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="col s12 m6">
+                    <div class="card-panel black-text teal lighten-4 z-depth-4">
+                        <div class="center">
+                            <i class="material-icons icon-content green-text">android</i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, suscipit eius. Placeat aspernatur odio necessitatibus voluptate aliquid velit labore minima repellendus, beatae veritatis harum vitae magni. Dolorum assumenda delectus mollitia.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m6">
+                    <div class="card-panel black-text red lighten-5 z-depth-4">
+                        <div class="center">
+                            <i class="material-icons icon-content red-text">audiotrack</i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, suscipit eius. Placeat aspernatur odio necessitatibus voluptate aliquid velit labore minima repellendus, beatae veritatis harum vitae magni. Dolorum assumenda delectus mollitia.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m12">
+                <div class="col s12 m6">
+                    <div class="card-panel black-text teal lighten-4 z-depth-4">
+                        <div class="center">
+                            <i class="material-icons icon-content green-text">android</i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, suscipit eius. Placeat aspernatur odio necessitatibus voluptate aliquid velit labore minima repellendus, beatae veritatis harum vitae magni. Dolorum assumenda delectus mollitia.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m6">
+                    <div class="card-panel black-text red lighten-5 z-depth-4">
+                        <div class="center">
+                            <i class="material-icons icon-content red-text">audiotrack</i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, suscipit eius. Placeat aspernatur odio necessitatibus voluptate aliquid velit labore minima repellendus, beatae veritatis harum vitae magni. Dolorum assumenda delectus mollitia.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
       </div>
         <div class="fixed-action-btn">
